Fix arcade screen background sizing to show full image without stretching

--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body::after {
     width: 100%;
     height: 100%;
     background-image: url('Assets/Images/Colors Screen.png');
-    background-size: cover;
-    background-position: center;
+    background-size: contain;
+    background-position: center top;
     background-repeat: no-repeat;
     z-index: 0;
     pointer-events: none;
